force-app/main/default/objects/Bypass_Settings__c/Bypass_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The custom setting is designed to maintain and bypass automation whenever needed.</description>
    <label>Bypass Settings</label>
</CustomObject>