force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, system will bypass all the Flows where bypass logic is implemented.</description>
    <inlineHelpText>If checked, system will bypass all the Flows where bypass logic is implemented.</inlineHelpText>
    <label>Bypass Flows</label>
    <type>Checkbox</type>
</CustomField>