force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, system will bypass all the Triggers where bypass logic is implemented.</description>
    <inlineHelpText>If checked, system will bypass all the Triggers where bypass logic is implemented.</inlineHelpText>
    <label>Bypass Triggers</label>
    <type>Checkbox</type>
</CustomField>