force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Validations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, system will bypass all the Validation Rules where bypass logic is implemented.</description>
    <inlineHelpText>If checked, system will bypass all the Validation Rules where bypass logic is implemented.</inlineHelpText>
    <label>Bypass Validations</label>
    <type>Checkbox</type>
</CustomField>