force-app/main/default/objects/Bypass_Settings__c/fields/Specific_Automation_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Specific_Automation_Bypass__c</fullName>
    <description>List of specific automation names to bypass (e.g., AccountTrigger,ContactValidation,LeadFlow). This is a required field with the default value &quot;N/A&quot;</description>
    <inlineHelpText>List of specific automation names to bypass (e.g., AccountTrigger,ContactValidation,LeadFlow).  This is a required field with the default value &quot;N/A&quot;</inlineHelpText>
    <label>Specific Automation Bypass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>